# Insurance-Underwriting-Intelligence-Dashboard

./: .gitignore  README.md  apt-packages.txt  packages.txt  pyproject.toml  requirements.txt  setup.py
data/raw/: sample_business_data.json
notebooks/: insurance_risk_analysis.ipynb
src/: demo_analysis.py  run_pipeline.py
src/dashboard/: app.py  claim_severity.py  claims_analysis.py  comparative_analysis.py  custom.css  geographic_analysis.py  load_data.py  model_performance.py  overview.py  portfolio_diversification.py  regulatory_compliance.py  risk_analysis.py  risk_correlation.py  scenario_planning.py  theme.py  time_series_analysis.py  underwriting_recommendations.py  what_if_analysis.py
src/data_processing/: third_party_data_integration.py
src/evaluation/: business_impact.py
src/features/: feature_engineering.py
src/modeling/: risk_models.py
