[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-underwriting-dashboard"
version = "0.1.0"
description = "Insurance Underwriting Intelligence Dashboard"
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Matthew Thompson"}
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json"]
