[build-system]
requires = ["setuptools==68.0.0", "wheel==0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-underwriting-dashboard"
version = "0.1.0"
description = "Insurance Underwriting Intelligence Dashboard"
requires-python = ">=3.9,<3.10"

[tool.setuptools]
packages = ["src"]
