[build-system]
requires = ["setuptools>=68.2.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-underwriting-dashboard"
version = "0.1.0"
description = "Insurance Underwriting Intelligence Dashboard"
requires-python = ">=3.12.0,<3.13.0"

[tool.setuptools]
packages = ["src"]
